[fe] fix: 메시지 컨테이너에 overflow 속성 적용

--- a/frontend/src/components/ChatRoom/index.module.scss
+++ b/frontend/src/components/ChatRoom/index.module.scss
@@ -22,6 +22,7 @@
 }
 .messages {
   flex: 1;
+  overflow: auto;
 }
 
 .userInput {
